# app

./: .firebaserc  .gitignore  Gallery.tsx  LICENSE  README.md  RecentActivity.tsx  custom.d.ts  extended_stats.json  extract.js  firebase.json  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  hooks.ts  metadata.json  order.json  package-lock.json  package.json  store.js  tailwind.config.js  tsconfig.json  utils.ts  wrap-with-provider.js  wrapPageElement.js
cardano/market/: README.md  coinSelection.js  contract.hs  languageViews.js  loader.js  package.json  plutus.js
cardano/market/ghc/: cabal.project  plutus-trade.cabal  plutus-trade.hs
collection_data/: build.json  extract.js  minting_policy.json
components/: index.ts
components/Button/: Button.tsx
components/Checkbox/: Checkbox.tsx
components/Disclosure/: Disclosure.tsx
components/Ellipsis/: index.ts
components/Footer/: Footer.tsx
components/Header/: Header.tsx  index.tsx
components/Image/: Image.tsx
components/Menu/: Menu.tsx
components/Popover/: Popover.tsx
components/Spinner/: Spinner.tsx
components/Switch/: Switch.tsx
components/Tabs/: Tabs.tsx
css/: index.css
layouts/: mainLayout.tsx  storeProvider.tsx
pages/: about.tsx  explore.tsx  index.tsx  privacyPolicy.tsx  profile.tsx  termsAndConditions.tsx
parts/explore/: Filter.tsx
scripts/: postinstall.js
spacebud/: Dialog.tsx
src/: api.ts  config.ts  custom.d.ts  hooks.ts  html.js  nebula_types.ts  store.js  theme.js  utils.ts
src/@chakra-ui/gatsby-plugin/: theme.js
src/cardano/: contract.hs  contractV2.hs  contractWithOffChain.hs  languageViews.json  loader.js
src/cardano/market/: README.md  coinSelection.js  coinSelectionALTERNATIVE.js  contract.hs  index.js  languageViews.js  loader.js  package-lock.json  package.json  plutus.js  test.js  utils.js
src/components/: index.ts
src/components/Account/: StartButton.jsx  StartButton.module.css  index.js
src/components/Button/: Button.jsx  index.js  (+5 more)
src/css/: index.css
src/data/: metadata.json  toolsRegistry.json
src/layouts/: mainLayout.tsx
src/pages/: 404.tsx  FAQ.js  FAQ.tsx  about.js  about.tsx  auctionCharles.tsx  autionCharles.tsx  communityTools.tsx  communityWallet.tsx  contact.js  explore.tsx  index.js  index.tsx  license.tsx  opening.js  privacyPolicy.js  profile.tsx  signing.tsx  termsAndConditions.js  tutorial.js  wormhole.tsx
src/templates/: explore.js  layout.js  profile.js  spacebud.js  spacebud.tsx
src/theme/: theme.js
theme/: common.ts
(+71 files in other folders)
